# Haptic-Dataset-Pipeline

./: .gitignore  README.md  test_rust_signals.py  wav_IO.py
Signal-Augmentations/: addSignals.py  dropSignals.py
rust-signals/: Cargo.toml  pyproject.toml
rust-signals/src/: batch_ops.rs  lib.rs  signal_ops.rs  types.rs  wav_io.rs
scripting/: bench_batch.py  bench_parallel_comparison.py  bench_python.py  bench_rust.py  bench_rust_array.py  generate_test_signals.py  generated_prompts.json  prompt_generator.py  run_benchmarks.sh
scripting/results/: insert_large.md  insert_medium.md  insert_small.md  mix_large.md  mix_medium.md  mix_small.md
